Patch broken links in app homepage
