# api/models.py
@@ -82,7 +82,7 @@ class PredictionRequest(models.Model):
     prediction = models.CharField(max_length=128)
     feedback = models.CharField(max_length=128, blank=True, null=True)
     notes = models.TextField(blank=True, null=True)
-    algorithm: Algorithm = models.ForeignKey(Algorithm, on_delete=models.CASCADE)
+    algorithm: Algorithm = models.ForeignKey(Algorithm, on_delete=models.DO_NOTHING, blank=True)
     created_at: date = models.DateTimeField(auto_now_add=True, blank=True)
     created_by = models.CharField(max_length=128)
 
